refactor: simplify Order and OrderItem relationships; update PaymentGatewayController for improved error handling and user ID retrieval